
FILE(GLOB_RECURSE tritium_SOURCES src/*.cpp src/*.cc src/*.c)
LIST(APPEND tritium_SOURCES ${CMAKE_SOURCE_DIR}/version.cpp)

FILE(GLOB_RECURSE tritium_INCLUDES Tritium/*.h src/*.h)
LIST(APPEND tritium_INCLUDES ${CMAKE_SOURCE_DIR}/version.h ${CMAKE_SOURCE_DIR}/config.h)

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} .)
ADD_LIBRARY(Tritium SHARED ${tritium_SOURCES} ${CMAKE_BINARY_DIR}/version.cpp)

TARGET_LINK_LIBRARIES(Tritium
    ${QT_LIBRARIES}
    ${LibSndfile_LIBRARIES}
    ${JACK_LIBRARIES}
    ${FLAC_LIBRARIES}
    ${FLAC++_LIBRARIES}
    ${LRDF_LIBRARIES}
    ${LibTar_LIBRARIES}
    ${ZLIB_LIBRARIES}
    ${LibArchive_LIBRARIES}
    )

INSTALL(TARGETS Tritium LIBRARY DESTINATION lib)
